feature: All pages functional, waiting for menu

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,10 +4,11 @@
 
 html,*, body {
   font-family: var(--font-inter);
+  box-sizing: border-box;
 }
 body {
   color: white;
-  background-color: black;
+ background-color: black;
  
 }
 
